objects/Revenue_Forecast_User_Quarters__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Q1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Q1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Q2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Q2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Q3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Q3</label>
        <type>Checkbox</type>
    </fields>
    <label>Revenue Forecast User Quarters</label>
</CustomObject>